src/main/java/com/pablocompany/proyecto/no1/compi2/compiler/zetariano/ZParser.g4
parser grammar ZParser;

options {
    tokenVocab=ZLexer;
}

/*===*****========*****===== PROGRAM ROOT SECTION ===*****==========*****===*/
program
    : class_declaration EOF
    ;

/*===*****========*****===== CLASS SECTION ===*****==========*****===*/

class_declaration
    : access_modifier CLASS name=ID (EXTENDS parent=ID)? INIT_BRACE class_member* FINAL_BRACE   # ClassDeclaration
    ;

/*------ CLASS MEMBER PRODUCTIONS (CONSTRUCTOR/ATTRIBUTES) ------*/
class_member
    : field_declaration             # ClassFieldMember
    | constructor_declaration       # ClassConstructorMember
    | method_declaration            # ClassMethodMember
    ;

/*------ FIELD PRODUCTION (ENCAPSULATION: MODIFIER REQUIRED) ------*/
field_declaration
    : access_modifier? type (INIT_BRACKET FINAL_BRACKET)* ID (EQUAL expression)? DOT_COMMA   # FieldDeclaration
    ;


/*------ CONSTRUCTOR PRODUCTION ------*/
constructor_declaration
    : access_modifier? ID INIT_PARENT parameter_list? FINAL_PARENT INIT_BRACE statement* FINAL_BRACE   # ConstructorDeclaration
    ;

/*------ METHOD PRODUCTION (OVERRIDE OPTIONAL) ------*/
method_declaration
    : OVERRIDE? access_modifier? type (INIT_BRACKET FINAL_BRACKET)* ID INIT_PARENT parameter_list? FINAL_PARENT INIT_BRACE statement* FINAL_BRACE   # MethodDeclaration
    ;

/*------ PARAMETER LIST PRODUCTIONS ------*/
parameter_list
    : parameter (COMMA parameter)*   # ParameterList
    ;

/*------ PARAMETER PRODUCTION ------*/
parameter
    : type (INIT_BRACKET FINAL_BRACKET)* ID   # ParameterStatement
    ;

/*===*****===== STATEMENT SECTION =====*****===*/
/*===*****========*****===== STATEMENTS (METHOD/CONSTRUCTOR BODY) ===*****==========*****===*/

statement
    : block_statement                   # StatementBlock
    | console_actions                   # StatementConsoleAction
    | loop_control                      # StatementLoopControl
    | return_statement                  # StatementReturn
    | abbreviated_operation             # StatementAbbreviatedOperation
    | compound_assignment DOT_COMMA     # StatementCompoundAssignment
    | nested_variables_usage            # StatementNestedAssignment
    | variable_declaration              # StatementVariableDeclaration
    | call_statement DOT_COMMA          # StatementObjectPropertyCalling
    ;

/*------ CALL AS STATEMENT (solo llamadas, nunca acceso plano) ------*/
call_statement
    : object_values DOT ID INIT_PARENT arguments_list? FINAL_PARENT   # ChainedCallStatement
    | ID INIT_PARENT arguments_list? FINAL_PARENT                     # DirectCallStatement
    ;

/*------ RETURN STATEMENT ------*/
return_statement
    : RETURN expression? DOT_COMMA          # ReturnStatement
    ;

/*------ LOOP CONTROL STATEMENTS ------*/
loop_control
    : CONTINUE DOT_COMMA        # LoopContinue
    | BREAK DOT_COMMA           # LoopBreak
    ;

/*------ OUTPUT ACTIONS ------*/
console_actions
    : PRINTLN INIT_PARENT expression FINAL_PARENT DOT_COMMA         # PrintlnAction
    | PRINT INIT_PARENT expression FINAL_PARENT DOT_COMMA           # PrintAction
    | read_call DOT_COMMA                                           # ReadAction
    ;

/*------ INPUT ACTIONS ------*/
read_call
    : READ INIT_PARENT FINAL_PARENT   # ReadCall
    ;

/*===*****===== COMMON CODE SECTION =====*****===*/

block_statement
    : if_statement              # BlockIf
    | switch_statement          # BlockSwitch
    | while_statement           # BlockWhile
    | do_while_statement        # BlockDoWhile
    | for_statement             # BlockFor
    ;

/*------ STATEMENT BODY PRODUCTION ------*/
statement_body
    : INIT_BRACE statement* FINAL_BRACE   # BracedStatementBody
    | statement                            # SingleStatementBody
    ;

/*------ IF STATEMENT PRODUCTION ------*/
if_statement
    : IF INIT_PARENT expression FINAL_PARENT statement_body else_if_list? else_block?   # IfStatement
    ;

/*------ ELSE IF LIST STATEMENT PRODUCTION ------*/
else_if_list
    : else_if_clause+ # ElseIfList
    ;

/*------ ELSE IF STATEMENT PRODUCTION ------*/
else_if_clause
    : ELSE IF INIT_PARENT expression FINAL_PARENT statement_body   # ElseIfClause
    ;

/*------ ELSE STATEMENT PRODUCTION ------*/

else_block
    : ELSE statement_body   # ElseBlock
    ;

/*------ SWITCH STATEMENT PRODUCTION ------*/
switch_statement
    : SWITCH INIT_PARENT expression FINAL_PARENT INIT_BRACE switch_case* default_case? FINAL_BRACE   # SwitchStatement
    ;

/*------ CASE INSTRUCTION PRODUCTION ------*/
switch_case
    : CASE expression TWO_POINTS statement*   # SwitchCase
    ;

/*------ DEFAULT INSTRUCTION PRODUCTION ------*/
default_case
    : DEFAULT TWO_POINTS statement*   # DefaultCase
    ;

/*------ LOOPS ------*/

while_statement
    : WHILE INIT_PARENT expression FINAL_PARENT statement_body   # WhileStatement
    ;

/*------ DO WHILE STATEMENT PRODUCTION ------*/
do_while_statement
    : DO statement_body WHILE INIT_PARENT expression FINAL_PARENT DOT_COMMA   # DoWhileStatement
    ;

/*------ FOR STATEMENT PRODUCTION  (ALLOWS THE INFINITE LOOP) ------*/
for_statement
    : FOR INIT_PARENT for_init? DOT_COMMA expression? DOT_COMMA for_update? FINAL_PARENT statement_body   # ForStatement
    ;

/*------ FOR INITIAL STATEMENT PRODUCTION (INITIAL ITERATOR VALUE) ------*/
for_init
    : type (INIT_BRACKET FINAL_BRACKET)* ID EQUAL expression   # ForInitVarDecl
    | nest_variable EQUAL expression                                       # ForInitAssign
    ;

/*------ FOR UPDATE STATEMENT PRODUCTION------*/
for_update
    : nest_variable ABREV_PLUS         #ForUpdateIncrement
    | nest_variable ABREV_MINUS        #ForUpdateDecrement
    | ABREV_PLUS nest_variable         #ForUpdatePrefixIncrement
    | ABREV_MINUS nest_variable        #ForUpdatePrefixDecrement
    | nest_variable EQUAL expression   #ForUpdateAssign
    | compound_assignment              # ComPoundAssingment
    ;

/*===*****===== VARIABLES AND ASSIGNMENT SECTION =====*****===*/

/*------ VARIABLE DECLARATION PRODUCTION (ALLOW MULTI-DIMENSIONAL ARRAYS)------*/
variable_declaration
    : type (INIT_BRACKET FINAL_BRACKET)* ID (EQUAL expression)? DOT_COMMA   # VariableDeclaration
    ;


/*------ NESTED ASSIGNMENT VALUES PRODUCTIONS------*/
nested_variables_usage
    : object_values EQUAL expression DOT_COMMA   # NestedObjectAssignment
    ;


/*------ COMPOUND ASSIGNMENT PRODUCTIONS ------*/
compound_assignment
    : nest_variable BY_ONE_ADD expression                 # CompoundAddAssignment
    | nest_variable BY_ONE_MINUS expression               # CompoundSubAssignment
    | nest_variable BY_ONE_MULTIPLICATION expression      # CompoundMulAssignment
    | nest_variable BY_ONE_DIVISION expression            # CompoundDivAssignment
    | nest_variable BY_ONE_PERCENT expression             # CompoundModAssignment
    ;

/*------ INCREMENT / DECREMENT PRODUCTIONS (PREFIX AND SUFIX) ------*/
abbreviated_operation
    : nest_variable ABREV_PLUS DOT_COMMA    # IncSufixOperation
    | nest_variable ABREV_MINUS DOT_COMMA   # DecSufixOperation
    | ABREV_PLUS nest_variable  DOT_COMMA   # IncPrefixOperation
    | ABREV_MINUS nest_variable  DOT_COMMA   # DecPrefixOperation
    ;

/*--------****--- ASSIGNMENT / OPERATION TARGET ---****--------*/
nest_variable
    : object_values   # NestedVariable
    ;

/*--------****--- OBJECT AND ARRAY ACCESS CHAINS ---****--------*/
object_values
    : object_values DOT ID                                                  # ObjectPropertyChain
    | object_values DOT ID INIT_PARENT arguments_list? FINAL_PARENT         # ObjectMethodChain
    | object_values INIT_BRACKET expression FINAL_BRACKET                   # ObjectArrayAccessChain
    | ID INIT_PARENT arguments_list? FINAL_PARENT                           # BaseFunctionCall
    | THIS                                                                  # BaseThis
    | ID                                                                    # BaseIdentifier
    ;


/*--------****--- ARGUMENT FUNCTION LIST ---****--------*/

arguments_list
    : expression (COMMA expression)*        # ArgumentsList
    ;

/*--------****--- OBJECT / ARRAY INSTANTIATION ---****--------*/

instantiation
    : NEW type INIT_PARENT arguments_list? FINAL_PARENT           # ObjectInstantiation
    | NEW type (INIT_BRACKET expression FINAL_BRACKET)+           # ArrayInstantiation
    ;

/*--------****--- ARRAY LITERAL ---****--------*/

array_literal
    : INIT_BRACE array_values? FINAL_BRACE   # ArrayLiteralValue
    ;

/*--------****--- ARRAY VALUES ---****--------*/

array_values
    : expression (COMMA expression)*   # ArrayValuesList
    ;

/*--******-------****--- OPERATION SECTION ---****-------******--*/
expression
    : INIT_PARENT expression FINAL_PARENT                                          # ExpressionParents
    | op=(NOT | MINUS) expression                                                  # ExpressionUnary
    | expression op=(MULTIPLICATION | DIVIDE | PERCENT) expression                 # ExpressionMultDiv
    | expression op=(PLUS | MINUS) expression                                      # ExpressionAddSub
    | expression op=(LESS | GREATER | LESS_EQUALS | GREATER_EQUALS) expression     # ExpressionRelational
    | expression op=(EQUALS | DIFERENCE) expression                                # ExpressionEquality
    | expression AND expression                                                    # ExpressionAnd
    | expression OR expression                                                     # ExpressionOr
    | <assoc=right> expression QUESTION expression TWO_POINTS expression           # ExpressionTernary
    | normal_values                                                                # ExpressionValue
    ;

/*--------****--- VALUES AND TYPES SECTION ---****--------*/

type
    : primitive_type        # TypePrimitive
    | ID                    # TypeClassName
    ;

/*--------****--- PRIMITIVE TYPES ---****--------*/
primitive_type
    : INTEGER    # TypeInt
    | DOUBLE     # TypeDouble
    | CHARACTER  # TypeChar
    | BOOLEAN    # TypeBoolean
    | VOID       # TypeVoid
    ;

/*--------****--- PRINCIPAL VALUES DATA ---****--------*/
normal_values
    : TEXT                          # ValText
    | CHAR                          # ValChar
    | DECIMAL                       # ValDecimal
    | INT                           # ValInt
    | boolean_values                # ValBool
    | NULL                          # ValNull
    | instantiation                 # ValInstantiation
    | object_values                 # ValObjectAccess
    | array_literal                 # ValArrayLiteral
    | read_call                     # ValReadCall
    ;

/*--------****--- BOOLEAN VALUES ---****--------*/
boolean_values
    : TRUE     # BoolTrue
    | FALSE    # BoolFalse
    ;

/*--------****--- ACCESS MODIFIER VALUES ---****--------*/
access_modifier
    : PRIVATE   # ModifierPrivate
    | PUBLIC    # ModifierPublic
    | PROTECTED # ModifierProtected
    ;
